added and enabled CONFIG_HUAWEI_KERNEL option for our architecture too

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -442,7 +442,7 @@ endmenu
 
 config  HUAWEI_KERNEL
 	bool "HUAWEI Product"
-	depends on ARCH_MSM7X25	
+	depends on (ARCH_MSM7X01A || ARCH_MSM7X25)
 	
 
 config MSM_STACKED_MEMORY
