--- a/arch/arm/configs/u8220_defconfig
+++ b/arch/arm/configs/u8220_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.32.9
-# Wed Jan  4 20:49:01 2012
+# Mon Jan  9 22:54:14 2012
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -207,6 +207,7 @@ CONFIG_MACH_MSM7201A_SURF=y
 CONFIG_MACH_MSM7201A_FFA=y
 # CONFIG_MACH_TROUT is not set
 # CONFIG_MACH_SAPPHIRE is not set
+CONFIG_HUAWEI_KERNEL=y
 CONFIG_MSM_STACKED_MEMORY=y
 CONFIG_PHYS_OFFSET=0x10000000
 CONFIG_MSM_AMSS_VERSION=6210
@@ -285,8 +286,11 @@ CONFIG_HUAWEI_BATTERY=y
 # CONFIG_HUAWEI_EVALUATE_POWER_CONSUMPTION is not set
 CONFIG_HUAWEI_U8220_KEYBOARD=y
 CONFIG_HUAWEI_MSM_VIBRATOR=y
+# CONFIG_HUAWEI_FEATURE_OFN_KEY is not set
 # CONFIG_HUAWEI_U8220_JOGBALL is not set
 CONFIG_HUAWEI_JOGBALL=y
+CONFIG_HUAWEI_KEY_TEST=y
+CONFIG_HUAWEI_RGB_KEY_LIGHT=y
 CONFIG_MSM_PM_TIMEOUT_HALT=y
 # CONFIG_MSM_PM_TIMEOUT_RESET_MODEM is not set
 # CONFIG_MSM_PM_TIMEOUT_RESET_CHIP is not set
@@ -904,6 +908,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_CY8C_TS is not set
 # CONFIG_TOUCHSCREEN_CYPRESS_CPT is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI_TM1319=y
+# CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI_TM is not set
 # CONFIG_TOUCHSCREEN_CYPRESS is not set
 # CONFIG_TOUCHSCREEN_MELFAS is not set
 CONFIG_INPUT_ACCELEROMETER=y
@@ -921,6 +926,7 @@ CONFIG_INPUT_KEYCHORD=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
 # CONFIG_INPUT_CAPELLA_CM3602 is not set
+# CONFIG_PROXIMITY_EVERLIGHT_APS_12D is not set
 
 #
 # Hardware I/O ports
@@ -1014,6 +1020,7 @@ CONFIG_SENSORS_AKM8973=y
 # CONFIG_SENSORS_MT9T013 is not set
 # CONFIG_VP_A1026 is not set
 CONFIG_QWERTY_KEYPAD_ADP5587=y
+# CONFIG_SENSORS_ST_LSM303DLH is not set
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
 # CONFIG_I2C_DEBUG_BUS is not set
@@ -1287,6 +1294,7 @@ CONFIG_FB_MSM_TVOUT_NONE=y
 # CONFIG_FB_MSM_EXTMDDI_SVGA is not set
 CONFIG_FB_MSM_EXTMDDI_NONE=y
 # CONFIG_FB_BROADSHEET is not set
+# CONFIG_LCD_REGISTER_DEBUG is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=y
 # CONFIG_LCD_ILI9320 is not set
@@ -1576,6 +1584,7 @@ CONFIG_HUAWEI_FEATURE_BSP=y
 # CONFIG_DIAG_ON_UART3 is not set
 # CONFIG_HUAWEI_STEREO_HEADSET is not set
 CONFIG_HUAWEI_SMI_64M=y
+CONFIG_HUAWEI_SHARE_MEMORY_DEVICE=y
 # CONFIG_HUAWEI_FACTORY_RECOVERY is not set
 # CONFIG_HUAWEI_USB_FUNCTION is not set
 # CONFIG_HUAWEI_FEATURE_U8220_T2 is not set
@@ -1587,6 +1596,7 @@ CONFIG_HUAWEI_SMI_64M=y
 # CONFIG_HUAWEI_FEATURE_U8220_BLUETOOTH is not set
 # CONFIG_HUAWEI_USB_PID_GENERAL_RELEASE is not set
 CONFIG_HUAWEI_USB_FUNCTION_PCUI=y
+# CONFIG_HUAWEI_BACK_KEY_MULTI is not set
 # CONFIG_HUAWEI_FOTA_UPDATA is not set
 # CONFIG_USB_AUTO_INSTALL is not set
 
