Switch back to stock DSP works fine with old camera interface after fix

--- a/arch/arm/configs/u8220_defconfig
+++ b/arch/arm/configs/u8220_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.32.9
-# Mon Jan 16 14:18:54 2012
+# Mon Jan 16 23:33:08 2012
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -267,13 +267,17 @@ CONFIG_MSM_RPCSERVER_HANDSET=y
 # CONFIG_MSM_RMT_STORAGE_CLIENT is not set
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
 CONFIG_MSM_HW3D=y
-# CONFIG_MSM_ADSP is not set
-CONFIG_MSM_7200A_ADSP=y
+CONFIG_MSM_ADSP=y
+# CONFIG_MSM_7200A_ADSP is not set
+CONFIG_ADSP_RPC_VER=0x30001
 CONFIG_AMSS_7X25_VERSION_2009=y
 # CONFIG_AMSS_7X25_VERSION_2008 is not set
+CONFIG_MSM_ADSP_REPORT_EVENTS=y
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
 CONFIG_MSM_DMA_TEST=m
 # CONFIG_WIFI_CONTROL_FUNC is not set
+CONFIG_AUDIO_AAC_PLUS=y
+CONFIG_AUDIO_ENHANCED_AAC_PLUS=y
 # CONFIG_SURF_FFA_GPIO_KEYPAD is not set
 # CONFIG_HUAWEI_GPIO_KEYPAD is not set
 # CONFIG_CLOCK_BASED_SLEEP_LIMIT is not set
@@ -1343,6 +1347,7 @@ CONFIG_SND_SOC=y
 #
 # MSM SoC Audio support
 #
+# CONFIG_SND_MSM_SOC is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
 # CONFIG_SOUND_PRIME is not set
