added Melfas touchscreen a version from 2.6.29 pulse kernel - tried and tested

--- a/arch/arm/configs/u8220_defconfig
+++ b/arch/arm/configs/u8220_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.32.9
-# Mon Jan  9 22:54:14 2012
+# Sun Jan 22 21:20:14 2012
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -910,7 +910,8 @@ CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI_TM1319=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI_TM is not set
 # CONFIG_TOUCHSCREEN_CYPRESS is not set
-# CONFIG_TOUCHSCREEN_MELFAS is not set
+CONFIG_TOUCHSCREEN_MELFAS=y
+# CONFIG_MELFAS_UPDATE_TS_FIRMWARE is not set
 CONFIG_INPUT_ACCELEROMETER=y
 CONFIG_ACCELEROMETER_ADXL345=y
 CONFIG_ACCELEROMETER_ST_L1S35DE=y
