--- a/arch/arm/configs/u8220_defconfig
+++ b/arch/arm/configs/u8220_defconfig
@@ -1598,7 +1598,7 @@ CONFIG_HUAWEI_FEATURE_BSP=y
 # CONFIG_HUAWEI_STEREO_HEADSET is not set
 CONFIG_HUAWEI_SMI_64M=y
 CONFIG_HUAWEI_SHARE_MEMORY_DEVICE=y
-# CONFIG_HUAWEI_FACTORY_RECOVERY is not set
+CONFIG_HUAWEI_FACTORY_RECOVERY=y
 # CONFIG_HUAWEI_USB_FUNCTION is not set
 # CONFIG_HUAWEI_FEATURE_U8220_T2 is not set
 # CONFIG_HUAWEI_FEATURE_U8220_PRODUCTION is not set
