--- a/arch/arm/configs/u8220_defconfig
+++ b/arch/arm/configs/u8220_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.32.9
-# Mon Jan 30 22:59:41 2012
+# Thu Feb  2 23:10:44 2012
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -1415,8 +1415,9 @@ CONFIG_USB_GADGET_DUALSPEED=y
 # CONFIG_USB_G_PRINTER is not set
 CONFIG_USB_ANDROID=y
 CONFIG_USB_ANDROID_DIAG=y
-# CONFIG_USB_ANDROID_CDC_ECM is not set
-# CONFIG_USB_ANDROID_RNDIS is not set
+CONFIG_USB_ANDROID_CDC_ECM=y
+CONFIG_USB_ANDROID_RNDIS=y
+CONFIG_USB_ANDROID_RNDIS_WCEIS=y
 # CONFIG_USB_ANDROID_RMNET is not set
 CONFIG_USB_F_SERIAL=y
 CONFIG_MODEM_SUPPORT=y
