--- a/arch/arm/configs/u8220_defconfig
+++ b/arch/arm/configs/u8220_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.32.9
-# Thu Feb  2 23:10:44 2012
+# Sun Feb  5 22:30:45 2012
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -1030,7 +1030,7 @@ CONFIG_SENSORS_AKM8973=y
 # CONFIG_SENSORS_PCA963X is not set
 # CONFIG_SENSORS_MT9T013 is not set
 # CONFIG_VP_A1026 is not set
-CONFIG_QWERTY_KEYPAD_ADP5587=y
+# CONFIG_QWERTY_KEYPAD_ADP5587 is not set
 # CONFIG_SENSORS_ST_LSM303DLH is not set
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
@@ -1611,7 +1611,7 @@ CONFIG_HUAWEI_FACTORY_RECOVERY=y
 CONFIG_HUAWEI_USB_FUNCTION_PCUI=y
 # CONFIG_HUAWEI_BACK_KEY_MULTI is not set
 # CONFIG_HUAWEI_FOTA_UPDATA is not set
-# CONFIG_USB_AUTO_INSTALL is not set
+CONFIG_USB_AUTO_INSTALL=y
 
 #
 # File systems
