My working config

--- a/arch/arm/configs/u8220_defconfig
+++ b/arch/arm/configs/u8220_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.32.9
-# Thu Mar  8 07:27:36 2012
+# Sun Mar 25 00:54:58 2012
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -273,7 +273,6 @@ CONFIG_MSM_RPCSERVER_HANDSET=y
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
 CONFIG_MSM_HW3D=y
 CONFIG_MSM_ADSP=y
-# CONFIG_MSM_7200A_ADSP is not set
 CONFIG_ADSP_RPC_VER=0x30001
 CONFIG_AMSS_7X25_VERSION_2009=y
 # CONFIG_AMSS_7X25_VERSION_2008 is not set
@@ -395,16 +394,22 @@ CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_DEBUG=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_STAT_DETAILS=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVEX is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_SMARTASS2=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVEX=y
 # CONFIG_CPU_IDLE is not set
 CONFIG_CPU_FREQ_MSM=y
 
@@ -1234,19 +1239,19 @@ CONFIG_MSM_CAMERA=y
 CONFIG_MT9T013=y
 CONFIG_MT9D112=y
 CONFIG_MT9P012=y
-CONFIG_MSM_CAMERA_AF_FOXCONN=y
-# CONFIG_MSM_CAMERA_AF_BAM is not set
+# CONFIG_MSM_CAMERA_AF_FOXCONN is not set
+CONFIG_MSM_CAMERA_AF_BAM=y
 CONFIG_MT9P012_KM=y
 CONFIG_S5K3E2FX=y
-# CONFIG_VB6801 is not set
+CONFIG_VB6801=y
 CONFIG_MSM_CAMERA_FLASH=y
 # CONFIG_MSM_GEMINI is not set
 CONFIG_HUAWEI_CAMERA=y
 CONFIG_HUAWEI_CAMERA_SENSOR_OV3647=y
 CONFIG_HUAWEI_CAMERA_SENSOR_OV7690=y
-# CONFIG_HUAWEI_CAMERA_SENSOR_HIMAX0356 is not set
-# CONFIG_HUAWEI_CAMERA_SENSOR_MT9D113 is not set
-# CONFIG_HUAWEI_CAMERA_SENSOR_S5K5CA is not set
+CONFIG_HUAWEI_CAMERA_SENSOR_HIMAX0356=y
+CONFIG_HUAWEI_CAMERA_SENSOR_MT9D113=y
+CONFIG_HUAWEI_CAMERA_SENSOR_S5K5CA=y
 # CONFIG_RADIO_ADAPTERS is not set
 CONFIG_DAB=y
 
