--- a/arch/arm/configs/u8220_defconfig
+++ b/arch/arm/configs/u8220_defconfig
@@ -1061,6 +1061,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_IPMI_HANDLER is not set
 # CONFIG_HW_RANDOM is not set
+CONFIG_AR6000=m
 # CONFIG_R3964 is not set
 # CONFIG_RAW_DRIVER is not set
 # CONFIG_TCG_TPM is not set
