battery drain fix?

--- a/arch/arm/configs/u8220_defconfig
+++ b/arch/arm/configs/u8220_defconfig
@@ -112,7 +112,7 @@ CONFIG_HAVE_KRETPROBES=y
 #
 # GCOV-based kernel profiling
 #
-CONFIG_SLOW_WORK=y
+# CONFIG_SLOW_WORK is not set
 # CONFIG_GCOV_KERNEL is not set
 # CONFIG_SLOW_WORK is not set
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
@@ -1793,11 +1793,11 @@ CONFIG_YAFFS_SHORT_NAMES_IN_RAM=y
 # CONFIG_ROMFS_FS is not set
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
-CONFIG_NETWORK_FILESYSTEMS=y
+# CONFIG_NETWORK_FILESYSTEMS is not set
 # CONFIG_NFS_FS is not set
 # CONFIG_NFSD is not set
 # CONFIG_SMB_FS is not set
-CONFIG_CIFS=m
+# CONFIG_CIFS is not set
 # CONFIG_CIFS_STATS is not set
 # CONFIG_CIFS_WEAK_PW_HASH is not set
 # CONFIG_CIFS_UPCALL is not set
