--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -205,6 +205,9 @@ config SND_SOC_WM8990
 config SND_SOC_WM8993
 	tristate
 
+config SND_SOC_WM8994
+        tristate
+
 config SND_SOC_WM9081
 	tristate
 
@@ -220,3 +223,10 @@ config SND_SOC_WM9713
 # Amp
 config SND_SOC_MAX9877
 	tristate
+
+config SND_BOEFFLA
+        bool "Boeffla Sound Engine (AndiP71)"
+        default y if SND_SOC_WM8994=y
+        depends on SND_SOC_WM8994
+        help
+                Include the Boeffla Sound Engine by AndiP71
