--- a/arch/arm/configs/u8220_defconfig
+++ b/arch/arm/configs/u8220_defconfig
@@ -53,13 +53,9 @@ CONFIG_SYSVIPC_SYSCTL=y
 #
 CONFIG_TREE_RCU=y
 # CONFIG_TREE_PREEMPT_RCU is not set
-CONFIG_JRCU=y
-# CONFIG_PREEMPT_RCU is not set
-CONFIG_JRCU_DAEMON=y
-CONFIG_JRCU_DAEMON_PRIO=0
-CONFIG_JRCU_LAZY=y
-CONFIG_PREEMPT_COUNT_CPU=y
 # CONFIG_RCU_TRACE is not set
+CONFIG_RCU_FANOUT=32
+# CONFIG_RCU_FANOUT_EXACT is not set
 # CONFIG_TREE_RCU_TRACE is not set
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
@@ -77,7 +73,6 @@ CONFIG_RD_GZIP=y
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
-CONFIG_GENLOCK=y
 CONFIG_PANIC_TIMEOUT=3
 CONFIG_EMBEDDED=y
 CONFIG_UID16=y
